// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MyData /> check how renders should render everything correctly for admin user 1`] = `
<DocumentFragment>
  <h3
    class="sc-eCssSg eXQgPS"
  >
    My data
  </h3>
  <div
    class="sc-hKgILt eboeig"
    direction="column"
    spacing="3"
    width="100%"
    wrap="nowrap"
  >
    <section
      class="sc-dlfnbm dSatpG"
    >
      <div
        class="sc-bdfBwQ iLceJD"
      >
        <div
          class="sc-hKgILt gmWsbW"
          data-testid="SingleInfo-Username"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="sc-eCssSg eLKVbs"
          >
            Username
          </h4>
          <span
            class="sc-fubCfw osNBQ"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            username
          </span>
        </div>
        <div
          class="sc-hKgILt gmWsbW"
          data-testid="SingleInfo-Name"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="sc-eCssSg eLKVbs"
          >
            Name
          </h4>
          <span
            class="sc-fubCfw osNBQ"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            firstName lastName
          </span>
          <button
            class="sc-jSgupP biAJYh"
            color="blue"
            data-testid="SingleInfo-Name-btn"
            type="button"
          >
            Change
          </button>
        </div>
        <div
          class="sc-hKgILt gmWsbW"
          data-testid="SingleInfo-Email"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="sc-eCssSg eLKVbs"
          >
            Email
          </h4>
          <span
            class="sc-fubCfw osNBQ"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            email@domain.com
          </span>
          <button
            class="sc-jSgupP biAJYh"
            color="blue"
            data-testid="SingleInfo-Email-btn"
            type="button"
          >
            Change
          </button>
        </div>
        <div
          class="sc-hKgILt gmWsbW"
          data-testid="SingleInfo-Address"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="sc-eCssSg eLKVbs"
          >
            Address
          </h4>
          <div
            class="sc-hKgILt cUIkdS"
            direction="column"
            spacing="1"
            width="100%"
            wrap="nowrap"
          >
            <span
              class="sc-fubCfw osNBQ"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              street
            </span>
            <span
              class="sc-fubCfw osNBQ"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              zipCode city
            </span>
            <span
              class="sc-fubCfw osNBQ"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              country
            </span>
          </div>
          <button
            class="sc-jSgupP biAJYh"
            color="blue"
            data-testid="SingleInfo-Address-btn"
            type="button"
          >
            Change
          </button>
        </div>
        <div
          class="sc-hKgILt gmWsbW"
          data-testid="SingleInfo-Contacts"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="sc-eCssSg eLKVbs"
          >
            Contacts
          </h4>
          <div
            class="sc-hKgILt cUIkdS"
            direction="column"
            spacing="1"
            width="100%"
            wrap="nowrap"
          >
            <span
              class="sc-fubCfw osNBQ"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              Email: visible
            </span>
            <span
              class="sc-fubCfw osNBQ"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              Phone number: visible
            </span>
          </div>
          <button
            class="sc-jSgupP biAJYh"
            color="blue"
            data-testid="SingleInfo-Contacts-btn"
            type="button"
          >
            Change
          </button>
        </div>
        <div
          class="sc-hKgILt gmWsbW"
          data-testid="SingleInfo-Phone number"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="sc-eCssSg eLKVbs"
          >
            Phone number
          </h4>
          <span
            class="sc-fubCfw osNBQ"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            phone
          </span>
          <button
            class="sc-jSgupP biAJYh"
            color="blue"
            data-testid="SingleInfo-Phone number-btn"
            type="button"
          >
            Change
          </button>
        </div>
        <div
          class="sc-hKgILt kWUthc actions"
          direction="row"
          spacing="3"
          width="100%"
          wrap="nowrap"
        >
          <button
            class="sc-jSgupP biAJYh"
            color="blue"
            type="button"
          >
            Change password
          </button>
          <button
            class="sc-jSgupP hQkrdZ"
            color="red"
            type="button"
          >
            Delete account
          </button>
        </div>
        <div
          class="sc-hKgILt kWUthc actions"
          data-testid="MyData-admin-content"
          direction="row"
          spacing="3"
          width="100%"
          wrap="nowrap"
        >
          <button
            class="sc-jSgupP biAJYh"
            color="blue"
            type="button"
          >
            Add admin
          </button>
          <button
            class="sc-jSgupP hQkrdZ"
            color="red"
            type="button"
          >
            Remove admin
          </button>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`<MyData /> check how renders should render everything correctly for non admin user with status active 1`] = `
<DocumentFragment>
  <h3
    class="sc-eCssSg eXQgPS"
  >
    My data
  </h3>
  <div
    class="sc-hKgILt eboeig"
    direction="column"
    spacing="3"
    width="100%"
    wrap="nowrap"
  >
    <section
      class="sc-dlfnbm dSatpG"
    >
      <div
        class="sc-bdfBwQ iLceJD"
      >
        <div
          class="sc-hKgILt gmWsbW"
          data-testid="SingleInfo-Username"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="sc-eCssSg eLKVbs"
          >
            Username
          </h4>
          <span
            class="sc-fubCfw osNBQ"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            username
          </span>
        </div>
        <div
          class="sc-hKgILt gmWsbW"
          data-testid="SingleInfo-Name"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="sc-eCssSg eLKVbs"
          >
            Name
          </h4>
          <span
            class="sc-fubCfw osNBQ"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            firstName lastName
          </span>
          <button
            class="sc-jSgupP biAJYh"
            color="blue"
            data-testid="SingleInfo-Name-btn"
            type="button"
          >
            Change
          </button>
        </div>
        <div
          class="sc-hKgILt gmWsbW"
          data-testid="SingleInfo-Email"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="sc-eCssSg eLKVbs"
          >
            Email
          </h4>
          <span
            class="sc-fubCfw osNBQ"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            email@domain.com
          </span>
          <button
            class="sc-jSgupP biAJYh"
            color="blue"
            data-testid="SingleInfo-Email-btn"
            type="button"
          >
            Change
          </button>
        </div>
        <div
          class="sc-hKgILt gmWsbW"
          data-testid="SingleInfo-Address"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="sc-eCssSg eLKVbs"
          >
            Address
          </h4>
          <div
            class="sc-hKgILt cUIkdS"
            direction="column"
            spacing="1"
            width="100%"
            wrap="nowrap"
          >
            <span
              class="sc-fubCfw osNBQ"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              street
            </span>
            <span
              class="sc-fubCfw osNBQ"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              zipCode city
            </span>
            <span
              class="sc-fubCfw osNBQ"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              country
            </span>
          </div>
          <button
            class="sc-jSgupP biAJYh"
            color="blue"
            data-testid="SingleInfo-Address-btn"
            type="button"
          >
            Change
          </button>
        </div>
        <div
          class="sc-hKgILt gmWsbW"
          data-testid="SingleInfo-Contacts"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="sc-eCssSg eLKVbs"
          >
            Contacts
          </h4>
          <div
            class="sc-hKgILt cUIkdS"
            direction="column"
            spacing="1"
            width="100%"
            wrap="nowrap"
          >
            <span
              class="sc-fubCfw osNBQ"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              Email: visible
            </span>
            <span
              class="sc-fubCfw osNBQ"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              Phone number: visible
            </span>
          </div>
          <button
            class="sc-jSgupP biAJYh"
            color="blue"
            data-testid="SingleInfo-Contacts-btn"
            type="button"
          >
            Change
          </button>
        </div>
        <div
          class="sc-hKgILt gmWsbW"
          data-testid="SingleInfo-Phone number"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="sc-eCssSg eLKVbs"
          >
            Phone number
          </h4>
          <span
            class="sc-fubCfw osNBQ"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            phone
          </span>
          <button
            class="sc-jSgupP biAJYh"
            color="blue"
            data-testid="SingleInfo-Phone number-btn"
            type="button"
          >
            Change
          </button>
        </div>
        <div
          class="sc-hKgILt kWUthc actions"
          direction="row"
          spacing="3"
          width="100%"
          wrap="nowrap"
        >
          <button
            class="sc-jSgupP biAJYh"
            color="blue"
            type="button"
          >
            Change password
          </button>
          <button
            class="sc-jSgupP hQkrdZ"
            color="red"
            type="button"
          >
            Delete account
          </button>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`<MyData /> check how renders should render everything correctly for non admin user with status pending 1`] = `
<DocumentFragment>
  <h3
    class="sc-eCssSg eXQgPS"
  >
    My data
  </h3>
  <div
    class="sc-hKgILt eboeig"
    direction="column"
    spacing="3"
    width="100%"
    wrap="nowrap"
  >
    <section
      class="sc-dlfnbm dSatpG"
      data-testid="MyData-pending-user-content"
    >
      <span
        class="sc-fubCfw hUhCPF"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        You need to activate your account to unlock all app functionalities. Verification link is active for 10 minutes. You can resend it below. If you do not activate your account within 1 hour, account will be deleted permanently.
      </span>
    </section>
    <section
      class="sc-dlfnbm dSatpG"
    >
      <div
        class="sc-bdfBwQ iLceJD"
      >
        <div
          class="sc-hKgILt gmWsbW"
          data-testid="SingleInfo-Username"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="sc-eCssSg eLKVbs"
          >
            Username
          </h4>
          <span
            class="sc-fubCfw osNBQ"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            username
          </span>
        </div>
        <div
          class="sc-hKgILt gmWsbW"
          data-testid="SingleInfo-Name"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="sc-eCssSg eLKVbs"
          >
            Name
          </h4>
          <span
            class="sc-fubCfw osNBQ"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            firstName lastName
          </span>
        </div>
        <div
          class="sc-hKgILt gmWsbW"
          data-testid="SingleInfo-Email"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="sc-eCssSg eLKVbs"
          >
            Email
          </h4>
          <span
            class="sc-fubCfw osNBQ"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            email@domain.com
          </span>
        </div>
        <div
          class="sc-hKgILt gmWsbW"
          data-testid="SingleInfo-Address"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="sc-eCssSg eLKVbs"
          >
            Address
          </h4>
          <div
            class="sc-hKgILt cUIkdS"
            direction="column"
            spacing="1"
            width="100%"
            wrap="nowrap"
          >
            <span
              class="sc-fubCfw osNBQ"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              street
            </span>
            <span
              class="sc-fubCfw osNBQ"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              zipCode city
            </span>
            <span
              class="sc-fubCfw osNBQ"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              country
            </span>
          </div>
        </div>
        <div
          class="sc-hKgILt gmWsbW"
          data-testid="SingleInfo-Contacts"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="sc-eCssSg eLKVbs"
          >
            Contacts
          </h4>
          <div
            class="sc-hKgILt cUIkdS"
            direction="column"
            spacing="1"
            width="100%"
            wrap="nowrap"
          >
            <span
              class="sc-fubCfw osNBQ"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              Email: visible
            </span>
            <span
              class="sc-fubCfw osNBQ"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              Phone number: visible
            </span>
          </div>
        </div>
        <div
          class="sc-hKgILt gmWsbW"
          data-testid="SingleInfo-Phone number"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="sc-eCssSg eLKVbs"
          >
            Phone number
          </h4>
          <span
            class="sc-fubCfw osNBQ"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            phone
          </span>
        </div>
        <div
          class="sc-hKgILt kWUthc actions"
          data-testid="MyData-pending-user-actions"
          direction="row"
          spacing="3"
          width="100%"
          wrap="nowrap"
        >
          <button
            class="sc-jSgupP biAJYh"
            color="blue"
            type="button"
          >
            Send verification link
          </button>
          <button
            class="sc-jSgupP biAJYh"
            color="blue"
            type="button"
          >
            Logout
          </button>
        </div>
        <div
          class="sc-hKgILt kWUthc actions"
          direction="row"
          spacing="3"
          width="100%"
          wrap="nowrap"
        >
          <button
            class="sc-jSgupP hQkrdZ"
            color="red"
            type="button"
          >
            Delete account
          </button>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
